[package]
name = "dbus-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
serde_bytes = "0.11.14"
tokio = { version = "1.38.0", default-features = false, features = [
    "rt",
    "macros",
] }
zbus = { version = "4.3.0", default-features = false, features = ["tokio"] }
zvariant = { version = "4.1.1", features = ["serde_bytes"] }
